@@ -22,6 +22,7 @@ sensord (0.6.26) unstable; urgency=low
   * Removed unnecessary mutex from NodeBase
   * Bin doesn't use separate thread anymore. Implemented ThreadBin which still supports threaded usage. [Fixes NB#196900]
   * RingBuffer is not synchronized anymore. Implemented SynchronizedRingBuffer which is supposed to be used with ThreadBin.
+  * Debug output from USR2 is now printed with warning-level and output contains PID of active control and listen sessions if available. [Fixes: NB#197201].
 
  -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 21 Sep 2010 09:15:08 +0300
 
